Added run configuration advice